@@ -1,3 +1,4 @@
+* BUG#8371 Vérification de l'ordonnancement des indemnisations par service lors du batch de création d'indemnisations en raison de l'évolution vérifiant les périodes manquantes lors de l'ordonnancement
 * FEA#8159 Ajout du champ de configuration "Bloque l'ordonnancement des indemnisations" sur les sous statuts de sinistres permettant de bloquer l'ordonnancement des indemnisations sur les sinistres ouverts
 * OTH#0000 Iteration sur 7982. Initialiser le journal de paiment si possible sur une indemnisation
 * BUG#8387 Ajout d'une valeur par défaut pour le champ active sur les raisons d'annulation
